# llm-metar

./: .gitignore  README.md  llm_metar.py  pyproject.toml
llm_metar/: __init__.py  __main__.py
llm_sky/: __init__.py  metar_data.py
